--- a/index.html
+++ b/index.html
@@ -20,19 +20,16 @@
     <h3 id="gameName">SPACE KNIGHT</h3>
     <h3 id="buttons"><button class="start">START</button>
     <button class="htp">HOW TO PLAY</button>
-</h3>
+    </h3>
     <div id="game">
         <div id="char"></div>
-        <div id="ufo1"></div>
-        <div id="ufo2"></div>
-        <div id="ufo3"></div>
-        <div id="ufo4"></div>
-        <div id="alien"></div>
+        <div class="ufo"></div>
         <div id="rock"></div>
         <audio id="jump audio" src="/pics/jumpsound.wav"></audio>
         <audio id="game over" src="/pics/gameover.wav"></audio>
     </div> 
-    <img class="gameOver" src="pics/gameover.png">
+    <h6 class="gameOver">GAME OVER</h6>
+    <button class="restart">RESTART</button>
 </body>
     <script src="js/app.js"></script>
 </html>
