--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Fjalla+One&family=Londrina+Shadow&family=Poiret+One&family=Poller+One&family=Rubik+Gemstones&family=Shadows+Into+Light&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Fjalla+One&family=Londrina+Shadow&family=Poiret+One&family=Poller+One&family=Rubik+Gemstones&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
 <link href='https://fonts.googleapis.com/css?family=Londrina+Shadow' rel='stylesheet' type='text/css'>
 </head>
 <body>
+    <button class="back">X</button>
     <h3 class="score">SCORE: <span id="score"></span></h3>
     <h3 id="gameName">SPACE KNIGHT</h3>
     <h3 id="buttons"><button class="start">START</button>
     <button class="htp">HOW TO PLAY</button>
     </h3>
+    <img id="htp" src="/pics/how to play.png">
     <div id="game">
         <div id="char"></div>
         <div class="ufo"></div>
         <div id="rock"></div>
         <audio id="jump audio" src="/pics/jumpsound.wav"></audio>
         <audio id="game over" src="/pics/gameover.wav"></audio>
+        <audio id="shoot" src="/pics/shot.wav"></audio>
     </div> 
     <h6 class="gameOver">GAME OVER</h6>
     <button class="restart">RESTART</button>
+    
 </body>
     <script src="js/app.js"></script>
 </html>
