--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Platform Game</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -18,18 +18,17 @@
     <h3 id="buttons"><button class="start">START</button>
     <button class="htp">HOW TO PLAY</button>
     </h3>
-    <img id="htp" src="/pics/how to play.png">
+    <img id="htp" src="../pics/how to play.png">
     <div id="game">
         <div id="char"></div>
         <div class="ufo"></div>
         <div id="rock"></div>
-        <audio id="jump audio" src="/pics/jumpsound.wav"></audio>
-        <audio id="game over" src="/pics/gameover.wav"></audio>
-        <audio id="shoot" src="/pics/shot.wav"></audio>
+        <audio id="jump audio" src="pics/jumpsound.wav"></audio>
+        <audio id="game over" src="pics/gameover.wav"></audio>
+        <audio id="shoot" src="pics/shot.wav"></audio>
     </div> 
     <h6 class="gameOver">GAME OVER</h6>
     <button class="restart">RESTART</button>
-    
+    <script src="js/app.js" type="text/javascript"></script>
 </body>
-    <script src="js/app.js"></script>
 </html>
