fixed how to play image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h3 id="buttons"><button class="start">START</button>
     <button class="htp">HOW TO PLAY</button>
     </h3>
-    <img id="htp" src="../pics/how to play.png">
+    <img id="htp" src="pics/how to play.png">
     <div id="game">
         <div id="char"></div>
         <div class="ufo"></div>
