--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <button class="back">X</button>
     <h3 class="score">SCORE: <span id="score"></span></h3>
+    <h3 class="ufoShot">UFO: <span id="ufoShot"></span></h3>
     <h3 id="gameName">SPACE KNIGHT</h3>
     <h3 id="buttons"><button class="start">START</button>
     <button class="htp">HOW TO PLAY</button>
@@ -26,8 +27,10 @@
         <audio id="jump audio" src="pics/jumpsound.wav"></audio>
         <audio id="game over" src="pics/gameover.wav"></audio>
         <audio id="shoot" src="pics/shot.wav"></audio>
+        <audio id="win sound" src="pics/winsound.wav"></audio>
     </div> 
     <h6 class="gameOver">GAME OVER</h6>
+    <h6 class="youWin">YOU WIN!</h6>
     <button class="restart">RESTART</button>
     <script src="js/app.js" type="text/javascript"></script>
 </body>
